--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -33,20 +33,21 @@ body {
   margin-bottom: 20px;
 }
 
-.feedback .function {
+.feedback .validObject {
   border-radius: 10px;
   background-color: green;
   color: white;
   display: inline-block;
   padding: 5px 10px;
+  margin: 10px;
 }
 
-.feedback .function .name {
+.feedback .validObject .name {
   background-color: white;
   border-radius: 10px;
   padding: 2px 8px;
 }
 
-.feedback .function .name {
+.feedback .validObject .name {
   color: green;
 }
