--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -17,8 +17,9 @@ body {
   padding: 0;
 }
 
-h3 {
-  color: #1976D2;
+h1, h2, h3, h4, h5 {
+  color: #2196F3;
+  font-weight: 400;
 }
 
 input, textarea {
@@ -32,7 +33,7 @@ input, textarea {
 
 .header {
   background-color: #1976D2;
-  padding: 20px 0;
+  padding: 10px 0;
   text-align: center;
   width: 100%;
 }
@@ -40,13 +41,20 @@ input, textarea {
 .header h1 {
   color: #fff;
   display: inline-block;
-  margin: auto;
+  margin: 0px auto;
 }
 
 
 .main {
   text-align: center;
   width: 100%;
+}
+
+.main p {
+  margin: auto;
+  margin-top: 20px;
+  text-align: left;
+  width: 620px;
 }
 
 .main textarea {
@@ -80,4 +88,15 @@ input, textarea {
 
 .whitelist-message {
   background-color: #388E3C;
+}
+
+
+.settings-section {
+  display: inline-block;
+  width: 310px;
+}
+
+.settings-section textarea{
+  display: inline-block;
+  width: 282px;
 }
